# personal-fin-sim

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_and_test.sh
data/: demo_profile.ini
include/: asset.h  clparser.h  constants.h  modelRecession.h  userDataLoading.h
src/: asset.cpp  clparser.cpp  main.cpp  modelRecession.cpp  personalFinSim.cpp  userDataLoading.cpp
tests/: CMakeLists.txt  test_asset.cpp  test_dataloading.cpp
